--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -7,14 +7,24 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: |
-        COMMIT_HASH=$(git rev-parse --short HEAD)
-        docker build . --file Dockerfile --tag test-deploy:$COMMIT_HASH
+      - uses: actions/checkout@v4
+      - name: Build the Docker image
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          docker build . --file Dockerfile --tag test-deploy:$COMMIT_HASH
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build 
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests in Docker container
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          docker run --rm test-deploy:$COMMIT_HASH pytest
